--- a/index.html
+++ b/index.html
@@ -96,11 +96,7 @@
     <h2>Fun Fair – Selected Songs</h2>
 
     <div class="iframe-wrap">
-      <iframe 
-        src="https://open.spotify.com/embed/playlist/2ndTZvE13F2hZX2Bxmao8e?utm_source=generator"
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy">
-      </iframe>
+      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/1EfP7IVY0fdfKz8FTc76Ht?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
     <div class="pay-box">
@@ -117,3 +113,4 @@
   </div>
 </body>
 </html>
+
