--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 
     <!-- First Playlist Embed -->
     <div class="iframe-wrap">
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0EA9zM2f7xHdy51kAm92PE?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0EA9zM2f7xHdy51kAm92PE?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
     <!-- Second Playlist Embed -->
     <div class="iframe-wrap">
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6lKHngHJdefzMwJxVjMoKO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/6lKHngHJdefzMwJxVjMoKO?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </div>
 
     <!-- Pay Box -->
@@ -106,4 +106,5 @@
   </div>
 </body>
 </html>
+
 
